fix gap in project section

--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ header {
   grid-template-rows: 1fr;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
-  gap: 0 15rem;
+  gap: 0 5rem;
   margin: 0 0;
 }
 
